--- a/util/hx-vers.sty
+++ b/util/hx-vers.sty
@@ -9,3 +9,4 @@
 \newcommand{\ST}{\emph{\mbox{Specifica\_tecnica\_1\_0\_0.pdf}}}
 \newcommand{\NdP}{\emph{\mbox{Norme\_di\_progetto\_2\_0\_0.pdf}}}
 \newcommand{\SdF}{\emph{\mbox{Studio\_di\_fattibilita\_1\_0\_0.pdf}}}
+\newcommand{\DP}{\emph{\mbox{Definizione\_di\_prodotto\_1\_0\_0.pdf}}}
