--- a/Esterni/Manuale_utente/diario.tex
+++ b/Esterni/Manuale_utente/diario.tex
@@ -4,7 +4,7 @@
 \begin{diario}
 	1.0.0 & {\AZ} (Responsabile) & 09/04/2017 & Approvazione del documento \\ \hline
 	0.1.0 & {\PB} (Verificatore) & 07/04/2017 & Verifica del documento \\ \hline
-%	0.0.6 & {\LB} (Amministratore) & 07/04/2017 & ... \\ \hline
+	0.0.6 & {\GG} (Amministratore) & 07/04/2017 & Stesa appendie \ref{app:gloss} \\ \hline
 	0.0.5 & {\LB} (Amministratore) & 07/04/2017 & Ampliata sezione \ref{par:arch} \\ \hline
 	0.0.4 & {\GG} (Amministratore) & 05/04/2017 & Stesura sezione \ref{sec:activity} e ultimate sezioni \ref{sec:save} e \ref{sec:load} \\ \hline
 	0.0.3 & {\LB} (Amministratore) & 05/04/2017 & Ampliata sezione \ref{sec:new} e stesa sezione \ref{sec:requisiti} \\ \hline
